--- a/test/fixtures/between.styl
+++ b/test/fixtures/between.styl
@@ -3,3 +3,15 @@
 
   +between(500px, 700px)
     color: blue
+
+  +between(2, 4)
+    color: white
+
+  +between(2, 600px)
+    color: black
+
+  +between(0, 500px)
+    color: #eee
+
+  +between(200px, scale-length)
+    color: #ccc
