scope global variables to 'rupture'

--- a/test/fixtures/between.styl
+++ b/test/fixtures/between.styl
@@ -13,5 +13,5 @@
   +between(0, 500px)
     color: #eee
 
-  +between(200px, length(scale))
+  +between(200px, length(rupture.scale))
     color: #ccc
