base font size fix for @declandewet

--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -1,8 +1,10 @@
+base-font-size ?= 16px
+
 rupture = {
   mobile-cutoff: 400px
   desktop-cutoff: 1050px
   enable-em-breakpoints: false
-  base-font-size: 16px
+  base-font-size: base-font-size
 }
 
 rupture.scale = 0 400px 600px 800px 1050px
