--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -47,36 +47,36 @@ between(min, max)
     -max = -convert-to-ems(-max) if enable-em-breakpoints
     condition = condition + ' and (max-width: %s)' % (-max)
   @media condition
-    {block} // `{block}` variant to ensure CSS selector is present
+    {block}
 
 at(scale-point)
   +between(scale-point, scale-point)
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 from(scale-point)
   +between(scale-point, length(scale))
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 above = from
 
 to(scale-point)
   +between(1, scale-point)
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 below = to
 
 mobile()
   +below(mobile-cutoff)
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 tablet()
   +between(mobile-cutoff, desktop-cutoff)
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 desktop()
   +above(desktop-cutoff)
-    block // `block` variant to ensure `display: block` is compatible
+    {block}
 
 retina()
   @media (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 144dpi)
-    {block} // `{block}` variant to ensure CSS selector is present
+    {block}
