--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -3,8 +3,13 @@ desktop-cutoff        ?= 1050px
 enable-em-breakpoints ?= false
 base-font-size        ?= 16px
 scale                 ?= 0 mobile-cutoff 600px 800px desktop-cutoff
+enable-anti-overlap   ?= false
+anti-overlap          ?= 1px .0625em .0625rem
 
 -convert-to-ems(target, context = base-font-size)
+  -targetUnit = unit(target)
+  if -targetUnit  is 'em' or -targetUnit is 'rem'
+    return target
   return unit((target / context), 'em')
 
 -on-scale(n)
@@ -16,6 +21,23 @@ scale                 ?= 0 mobile-cutoff 600px 800px desktop-cutoff
 -is-zero(n)
   return n is 0
 
+-overlap-shift(n)
+  -shiftUnit = unit(n)
+  for val in anti-overlap
+    return val if unit(val) is -shiftUnit
+  return 1px if -shiftUnit is 'px'
+  return .0625em if -shiftUnit is 'em'
+  return .0625rem if -shiftUnit is 'rem'
+  return 0
+
+-adjust-overlap(n, side = 'min')
+  -shift = -overlap-shift(n)
+  if (side is 'min' and -shift > 0) or (side is 'max' and -shift < 0)
+    n = n + -shift
+  return n
+    
+-is-positive(n)
+  return n >= 0
 // +between(min, max)
 // usage (scale can be mixed with custom values):
 //   - +between(1, 3) scale:scale
@@ -25,56 +47,50 @@ scale                 ?= 0 mobile-cutoff 600px 800px desktop-cutoff
 //   - +between(1, 300px) scale:custom
 //   - +between(200px, 4) custom:scale
 
-between(min, max)
-  if (-on-scale(min)) and (-on-scale(max))
-    -min = -is-zero(min) ? 0 : scale[min - 1]
-    -max = scale[max]
-  else if (-on-scale(min)) and (not -on-scale(max))
-    -min = -is-zero(min) ? 0 : scale[min - 1]
-    -max = max
-  else if (not -on-scale(min)) and (-on-scale(max))
-    -min = min
-    -max = scale[max]
-  else
-    -min = min
-    -max = max
-  if -min is not 0
+between(min, max, force-anti-overlap = false)
+  -min = scale[min - 1] unless -is-zero(min) or (not -on-scale(min))
+  -max = scale[max] unless not -on-scale(max)
+  -min ?= min
+  -max ?= max
+
+  condition = 'only screen'
+  unless -min is 0
+    -min = -adjust-overlap(-min, side: 'min') if enable-anti-overlap or force-anti-overlap
     -min = -convert-to-ems(-min) if enable-em-breakpoints
-    condition = 'only screen and (min-width: %s)' % (-min)
-  else
-    condition = 'only screen'
+    condition = condition + ' and (min-width: %s)' % (-min)
   unless -larger-than-scale(max)
+    -max = -adjust-overlap(-max, side: 'max') if enable-anti-overlap or force-anti-overlap
     -max = -convert-to-ems(-max) if enable-em-breakpoints
     condition = condition + ' and (max-width: %s)' % (-max)
   @media condition
     {block}
 
-at(scale-point)
-  +between(scale-point, scale-point)
+at(scale-point, force-anti-overlap = false)
+  +between(scale-point, scale-point, force-anti-overlap)
     {block}
 
-from(scale-point)
-  +between(scale-point, length(scale))
+from(scale-point, force-anti-overlap = false)
+  +between(scale-point, length(scale), force-anti-overlap)
     {block}
 
 above = from
 
-to(scale-point)
-  +between(1, scale-point)
+to(scale-point, force-anti-overlap = false)
+  +between(1, scale-point, force-anti-overlap)
     {block}
 
 below = to
 
-mobile()
-  +below(mobile-cutoff)
+mobile(force-anti-overlap = false)
+  +below(mobile-cutoff, force-anti-overlap)
     {block}
 
-tablet()
-  +between(mobile-cutoff, desktop-cutoff)
+tablet(force-anti-overlap = false)
+  +between(mobile-cutoff, desktop-cutoff, force-anti-overlap)
     {block}
 
-desktop()
-  +above(desktop-cutoff)
+desktop(force-anti-overlap = false)
+  +above(desktop-cutoff, force-anti-overlap)
     {block}
 
 retina()
