--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -6,6 +6,7 @@ rupture = {
   enable-em-breakpoints: false
   base-font-size: base-font-size
   anti-overlap: false
+  retina-queries: '(min-resolution: 1.5dppx)' '(-webkit-min-device-pixel-ratio: 1.5)' '(min--moz-device-pixel-ratio: 1.5)' '(min-resolution: 144dpi)'
 }
 
 rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff)
@@ -54,7 +55,7 @@ rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff)
 //   - +between(1, 300px) scale:custom
 //   - +between(200px, 4) custom:scale
 
-between(min, max, anti-overlap = rupture.anti-overlap)
+between(min, max, anti-overlap = rupture.anti-overlap, retina = false)
   -min = rupture.scale[min - 1] unless -is-zero(min) or (not -on-scale(min))
   -max = rupture.scale[max] unless not -on-scale(max)
   -min ?= min
@@ -69,37 +70,43 @@ between(min, max, anti-overlap = rupture.anti-overlap)
     -max = -convert-to('em', -max) if rupture.enable-em-breakpoints
     -max = -adjust-overlap(anti-overlap, -max, side: 'max')
     condition = condition + ' and (max-width: %s)' % (-max)
+  if retina
+    conditions = ()
+    for query in rupture.retina-queries
+      push(conditions, condition + ' and ' + query)
+    condition = join(', ', conditions)
   @media condition
     {block}
 
-at(scale-point, anti-overlap = rupture.anti-overlap)
-  +between(scale-point, scale-point, anti-overlap)
+at(scale-point, anti-overlap = rupture.anti-overlap, retina = false)
+  +between(scale-point, scale-point, anti-overlap, retina)
     {block}
 
-from(scale-point, anti-overlap = rupture.anti-overlap)
-  +between(scale-point, length(rupture.scale), anti-overlap)
+from(scale-point, anti-overlap = rupture.anti-overlap, retina = false)
+  +between(scale-point, length(rupture.scale), anti-overlap, retina)
     {block}
 
 above = from
 
-to(scale-point, anti-overlap = rupture.anti-overlap)
-  +between(1, scale-point, anti-overlap)
+to(scale-point, anti-overlap = rupture.anti-overlap, retina = false)
+  +between(1, scale-point, anti-overlap, retina)
     {block}
 
 below = to
 
-mobile(anti-overlap = rupture.anti-overlap)
-  +below(rupture.mobile-cutoff, anti-overlap)
+mobile(anti-overlap = rupture.anti-overlap, retina = false)
+  +below(rupture.mobile-cutoff, anti-overlap, retina)
     {block}
 
-tablet(anti-overlap = rupture.anti-overlap)
-  +between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap)
+tablet(anti-overlap = rupture.anti-overlap, retina = false)
+  +between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap, retina)
     {block}
 
-desktop(anti-overlap = rupture.anti-overlap)
-  +above(rupture.desktop-cutoff, anti-overlap)
+desktop(anti-overlap = rupture.anti-overlap, retina = false)
+  +above(rupture.desktop-cutoff, anti-overlap, retina)
     {block}
 
 retina()
-  @media (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 144dpi)
+  condition = join(', ', rupture.retina-queries)
+  @media condition
     {block}
