--- a/test/fixtures/expected/ems.css
+++ b/test/fixtures/expected/ems.css
@@ -46,7 +46,7 @@
     display: block;
   }
 }
-@media (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+@media only screen and (min-resolution: 1.5dppx), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
   .thing {
     display: block;
   }
