--- a/test/fixtures/expected/retina.css
+++ b/test/fixtures/expected/retina.css
@@ -1,9 +1,14 @@
 .hello {
   color: #f00;
 }
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
   .hello {
     color: #00f;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 3), only screen and (min-resolution: 288dpi) {
+  .hello {
+    color: #800000;
   }
 }
 @media only screen and (min-width: 500px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 500px) and (min-resolution: 192dpi) {
@@ -26,22 +31,22 @@
     color: #ff0;
   }
 }
-@media only screen and (min-width: 1050px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 1050px) and (min-resolution: 192dpi) {
+@media only screen and (min-width: 1050px) and (-webkit-min-device-pixel-ratio: 1), only screen and (min-width: 1050px) and (min-resolution: 96dpi) {
   .hello {
     color: #000;
   }
 }
-@media only screen and (min-width: 400px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 400px) and (min-resolution: 192dpi) {
+@media only screen and (min-width: 400px) and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min-width: 400px) and (min-resolution: 120dpi) {
   .hello {
     color: #fff;
   }
 }
-@media only screen and (max-width: 400px) and (-webkit-min-device-pixel-ratio: 2), only screen and (max-width: 400px) and (min-resolution: 192dpi) {
+@media only screen and (max-width: 400px) and (-webkit-min-device-pixel-ratio: 1.3), only screen and (max-width: 400px) and (min-resolution: 124.8dpi) {
   .hello {
     color: #008000;
   }
 }
-@media only screen and (min-width: 400px) and (max-width: 1050px) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 400px) and (max-width: 1050px) and (min-resolution: 192dpi) {
+@media only screen and (min-width: 400px) and (max-width: 1050px) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-width: 400px) and (max-width: 1050px) and (min-resolution: 144dpi) {
   .hello {
     color: #808080;
   }
