--- a/test/fixtures/named.styl
+++ b/test/fixtures/named.styl
@@ -3,3 +3,12 @@
 
   +between('s', 'l')
     color: white
+
+  +at('xs')
+    color: blue
+
+  +from('m')
+    color: black
+
+  +to('xs')
+    color: lime
