--- a/test/fixtures/expected/at.css
+++ b/test/fixtures/expected/at.css
@@ -1,6 +1,11 @@
 .hello {
   color: #f00;
 }
+@media only screen and (max-width: 400px) {
+  .hello {
+    color: #fff;
+  }
+}
 @media only screen and (min-width: 400px) and (max-width: 600px) {
   .hello {
     color: #00f;
