--- a/test/fixtures/expected/between.css
+++ b/test/fixtures/expected/between.css
@@ -6,6 +6,11 @@
     color: #00f;
   }
 }
+@media only screen and (max-width: 400px) {
+  .hello {
+    color: #0f0;
+  }
+}
 @media only screen and (min-width: 400px) and (max-width: 1050px) {
   .hello {
     color: #fff;
