--- a/test/fixtures/expected/named.css
+++ b/test/fixtures/expected/named.css
@@ -1,8 +1,23 @@
 .hello {
   color: #f00;
 }
-@media only screen and (min-width: 400px) and (max-width: 800px) {
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
   .hello {
     color: #fff;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .hello {
+    color: #00f;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .hello {
+    color: #000;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .hello {
+    color: #0f0;
   }
 }
