--- a/test/fixtures/device.styl
+++ b/test/fixtures/device.styl
@@ -1,10 +1,18 @@
-rupture.device-width = true
+rupture.use-device-width = true
 .device
   color: red
   +to(2)
     color: blue
-rupture.device-width = false
+rupture.use-device-width = false
 .not-device
   color: red
   +to(2)
     color: blue
+.device-mixin
+  color: red
+  +to(2)
+    color: blue
+    content 'max-width'
+  +to(3, use-device-width: true)
+    color: blue
+    content 'max-device-width'
