--- a/test/fixtures/expected/device.css
+++ b/test/fixtures/expected/device.css
@@ -14,3 +14,18 @@
     color: #00f;
   }
 }
+.device-mixin {
+  color: #f00;
+}
+@media only screen and (max-width: 600px) {
+  .device-mixin {
+    color: #00f;
+    content: 'max-width';
+  }
+}
+@media only screen and (max-device-width: 800px) {
+  .device-mixin {
+    color: #00f;
+    content: 'max-device-width';
+  }
+}
