--- a/test/fixtures/retina.styl
+++ b/test/fixtures/retina.styl
@@ -16,7 +16,7 @@ rupture.retina-density = 2
   +at(2, density: 'retina')
     color: cyan
 
-  +below(500px, density: 'retina')
+  +below(500px, density: retina)
     color: magenta
 
   +between(2, 4, density: 'retina')
