--- a/test/fixtures/orientation.styl
+++ b/test/fixtures/orientation.styl
@@ -9,7 +9,7 @@ rupture.density-queries = 'webkit' 'dpi'
   +portrait()
     color: maroon
 
-  +above(500px, orientation: landscape)
+  +above(500px, orientation: 'landscape')
     color: lime
 
   +at(2, orientation: portrait)
@@ -27,13 +27,13 @@ rupture.density-queries = 'webkit' 'dpi'
   +from(2, orientation: portrait)
     color: white
 
-  +mobile(orientation: landscape)
+  +mobile(orientation: "landscape")
     color: green
 
-  +tablet(orientation: portrait)
+  +tablet(orientation: 'portrait')
     color: gray
 
-  +to(2, orientation: landscape)
+  +to(2, orientation: 'landscape')
     color: navy
 
   +retina(orientation: portrait)
@@ -45,5 +45,5 @@ rupture.density-queries = 'webkit' 'dpi'
   +density(2, orientation: landscape)
     color: gold
 
-  +landscape(density: 2)
+  +landscape(density: '2')
     color: gold
