--- a/test/fixtures/ems.styl
+++ b/test/fixtures/ems.styl
@@ -6,9 +6,9 @@ rupture.enable-em-breakpoints = true
     display: block
   +above(480px)
     display: block
-  +from(500px)
+  +from-width(500px)
     display: block
-  +to(500px)
+  +to-width(500px)
     display: block
   +between(200px, 600px)
     display: block
