--- a/test/fixtures/expected/to.css
+++ b/test/fixtures/expected/to.css
@@ -1,4 +1,5 @@
 .hello {
+  background: linear-gradient(to bottom, #f8f8f8, #f4f4f4);
   color: #f00;
 }
 @media only screen and (max-width: 600px) {
