--- a/test/fixtures/named.styl
+++ b/test/fixtures/named.styl
@@ -7,10 +7,10 @@
   +at('xs')
     color: blue
 
-  +from('m')
+  +from-width('m')
     color: black
 
-  +to('xs')
+  +to-width('xs')
     color: lime
 
   +at('xl')
