--- a/test/fixtures/orientation.styl
+++ b/test/fixtures/orientation.styl
@@ -24,7 +24,7 @@ rupture.density-queries = 'webkit' 'dpi'
   +desktop(orientation: landscape)
     color: black
 
-  +from(2, orientation: portrait)
+  +from-width(2, orientation: portrait)
     color: white
 
   +mobile(orientation: "landscape")
@@ -33,7 +33,7 @@ rupture.density-queries = 'webkit' 'dpi'
   +tablet(orientation: 'portrait')
     color: gray
 
-  +to(2, orientation: 'landscape')
+  +to-width(2, orientation: 'landscape')
     color: navy
 
   +retina(orientation: portrait)
