--- a/test/fixtures/overlap.styl
+++ b/test/fixtures/overlap.styl
@@ -8,7 +8,7 @@ rupture.anti-overlap = 1px 0.001em 0.001rem
     text-align right
   +at(3)
     text-align left
-    
+
 rupture.anti-overlap = -1px -0.001em -0.001rem
 
 .overlap-minus-em
@@ -27,7 +27,7 @@ rupture.scale = 0 10rem 20rem 800px 1050px
     text-align right
   +at(3)
     text-align left
-    
+
 rupture.anti-overlap = -1px -.001em -.001rem
 .overlap-minus-rem
   text-align center
@@ -35,7 +35,7 @@ rupture.anti-overlap = -1px -.001em -.001rem
     text-align right
   +at(3)
     text-align left
-    
+
 rupture.anti-overlap = 1px .001em .001rem
 rupture.enable-em-breakpoints = false
 rupture.scale = 0 100px 200px 800px 1050px
@@ -45,7 +45,7 @@ rupture.scale = 0 100px 200px 800px 1050px
     text-align right
   +at(3)
     text-align left
-    
+
 rupture.anti-overlap = -1px -.001em -.001rem
 .overlap-minus-px
   text-align center
@@ -60,18 +60,18 @@ rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff)
 rupture.anti-overlap = false
 rupture.enable-em-breakpoints = false
 
-.overlap-force 
+.overlap-force
   text-align center
   +at(2, anti-overlap: true)
     text-align right
   +at(3, anti-overlap: false)
     text-align left
-  +from(4, anti-overlap: 1px)
+  +from-width(4, anti-overlap: 1px)
     text-align justify
-  +to(4, anti-overlap: 0.0625em)
+  +to-width(4, anti-overlap: 0.0625em)
     border 1px
     content 'we are going max-width, and overlap is positive, so wont change'
-  +from(5, anti-overlap: 0.0625rem)
+  +from-width(5, anti-overlap: 0.0625rem)
     text-align justify
   +tablet(anti-overlap: 1px 0.0625em 0.0625rem)
     font-weight bold
@@ -79,7 +79,7 @@ rupture.enable-em-breakpoints = false
     font-weight normal
   +desktop(anti-overlap: true)
     font-style italic
-    
+
 rupture.enable-em-breakpoints = true
 
 .overlap-force-em
@@ -88,12 +88,12 @@ rupture.enable-em-breakpoints = true
     text-align right
   +at(3, anti-overlap: false)
     text-align left
-  +from(4, anti-overlap: 1px)
+  +from-width(4, anti-overlap: 1px)
     text-align justify
-  +to(4, anti-overlap: 0.0625em)
+  +to-width(4, anti-overlap: 0.0625em)
     border 1px
     content 'we are going max-width, and overlap is positive, so wont change'
-  +from(5, anti-overlap: 0.0625rem)
+  +from-width(5, anti-overlap: 0.0625rem)
     text-align justify
   +tablet(anti-overlap: 1px 0.0625em 0.0625rem)
     font-weight bold
