--- a/test/fixtures/retina.styl
+++ b/test/fixtures/retina.styl
@@ -25,7 +25,7 @@ rupture.retina-density = 2
   +desktop(density: 1)
     color: black
 
-  +from(2, density: 1.25)
+  +from-width(2, density: 1.25)
     color: white
 
   +mobile(density: 1.3)
@@ -34,5 +34,5 @@ rupture.retina-density = 2
   +tablet(density: 1.5)
     color: gray
 
-  +to(2, density: 2)
+  +to-width(2, density: 2)
     color: navy
