hd added to the scale as well

--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -11,8 +11,8 @@ rupture = {
   retina-density: 1.5
   use-device-width: false
 }
-rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff)
-rupture.scale-names = 'xs' 's' 'm' 'l' 'xl'
+rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff) (rupture.hd-cutoff)
+rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
 -is-string(val)
   if typeof(val) is not 'unit'
     if val is a 'string' or val is a 'ident'
