--- a/test/fixtures/expected/named.css
+++ b/test/fixtures/expected/named.css
@@ -21,7 +21,7 @@
     color: #0f0;
   }
 }
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 1050px) and (max-width: 1800px) {
   .hello {
     color: #ccc;
   }
