--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -2,6 +2,7 @@ base-font-size ?= 16px
 suppress-modern-queries ?= false
 
 rupture = {
+  suppress-modern-queries: suppress-modern-queries
   mobile-cutoff: 400px
   desktop-cutoff: 1050px
   hd-cutoff: 1800px
@@ -111,7 +112,7 @@ between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientati
   -min ?= min
   -max ?= max
 
-  if suppress-modern-queries
+  if (rupture.suppress-modern-queries)
     if not (density or -max or orientation)
       {block}
   else
@@ -196,7 +197,7 @@ hd(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-
     {block}
 
 density(density, orientation = null)
-  if not suppress-modern-queries
+  if not (rupture.suppress-modern-queries)
     conditions = ()
     for query in -density-queries(density)
       condition = 'only screen and %s' % (query)
@@ -214,7 +215,7 @@ retina(orientation = null)
     {block}
 
 landscape(density = null)
-  if not suppress-modern-queries
+  if not (rupture.suppress-modern-queries)
     if -is-string(density)
       density = convert(density)
     if density
@@ -225,7 +226,7 @@ landscape(density = null)
         {block}
 
 portrait(density = null)
-  if not suppress-modern-queries
+  if not (rupture.suppress-modern-queries)
     if -is-string(density)
       density = convert(density)
     if density
