Fixed tests by updating them to use 'rupture.suppress-modern-queries' instead of the global variable.

--- a/test/fixtures/from-suppress-modern-queries.styl
+++ b/test/fixtures/from-suppress-modern-queries.styl
@@ -1,4 +1,4 @@
-suppress-modern-queries = true
+rupture.suppress-modern-queries = true
 
 .hello
   background: linear-gradient(from bottom, #F8F8F8, #F4F4F4)
