--- a/test/fixtures/from-rasterise-media-queries.styl
+++ b/test/fixtures/from-rasterise-media-queries.styl
@@ -1,4 +1,4 @@
-rupture.suppress-modern-queries = true
+rupture.rasterise-media-queries = true
 
 .hello
   background: linear-gradient(from bottom, #F8F8F8, #F4F4F4)
