--- a/rupture/index.styl
+++ b/rupture/index.styl
@@ -15,6 +15,7 @@ rupture = {
 }
 rupture.scale = 0 (rupture.mobile-cutoff) 600px 800px (rupture.desktop-cutoff) (rupture.hd-cutoff)
 rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
+
 -is-string(val)
   if typeof(val) is not 'unit'
     if val is a 'string' or val is a 'ident'
@@ -23,6 +24,7 @@ rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
       false
   else
     false
+
 -get-scale-number(scale-name)
   for list-item, i in rupture.scale-names
     if list-item is scale-name
@@ -88,6 +90,10 @@ rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
       push(queries, '(min-resolution: %sdppx)' % (density))
   return queries
 
+create-fallback-class(selected, class)
+  /{'' + class + ' ' + selected}
+    {block}
+
 // +between(min, max)
 // usage (scale can be mixed with custom values):
 //   - +between(1, 3) scale:scale
@@ -97,7 +103,9 @@ rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
 //   - +between(1, 300px) scale:custom
 //   - +between(200px, 4) custom:scale
 
-between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
+  selected = selector()
+
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
@@ -135,68 +143,72 @@ between(min, max, anti-overlap = rupture.anti-overlap, density = null, orientati
       condition = join(', ', conditions)
     @media condition
       {block}
+  if fallback-class
+    +create-fallback-class(selected, fallback-class)
+      {block}
 
-at(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+at(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(scale-point, scale-point, anti-overlap, density, orientation, use-device-width)
+  +between(scale-point, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-from-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+from-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(scale-point, length(rupture.scale), anti-overlap, density, orientation, use-device-width)
+  +between(scale-point, length(rupture.scale), anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
 above = from-width
 
-to-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+to-width(scale-point, anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(1, scale-point, anti-overlap, density, orientation, use-device-width)
+  +between(1, scale-point, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
 below = to-width
 
-mobile(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+mobile(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +below(rupture.mobile-cutoff, anti-overlap, density, orientation, use-device-width)
+  +below(rupture.mobile-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-tablet(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+tablet(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width)
+  +between(rupture.mobile-cutoff, rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-desktop(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+desktop(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +above(rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width)
+  +above(rupture.desktop-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-hd(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width)
+hd(anti-overlap = rupture.anti-overlap, density = null, orientation = null, use-device-width = rupture.use-device-width, fallback-class = null)
   if -is-string(orientation)
     orientation = convert(orientation)
   if -is-string(density)
     density = convert(density)
-  +above(rupture.hd-cutoff, anti-overlap, density, orientation, use-device-width)
+  +above(rupture.hd-cutoff, anti-overlap, density, orientation, use-device-width, fallback-class)
     {block}
 
-density(density, orientation = null)
+density(density, orientation = null, fallback-class = null)
+  selected = selector()
   if not (rupture.rasterise-media-queries)
     conditions = ()
     for query in -density-queries(density)
@@ -207,31 +219,42 @@ density(density, orientation = null)
     condition = join(', ', conditions)
     @media condition
       {block}
+    if fallback-class
+      +create-fallback-class(selected, fallback-class)
+        {block}
 
 pixel-ratio = density
 
-retina(orientation = null)
-  +density('retina', orientation)
+retina(orientation = null, fallback-class = null)
+  +density('retina', orientation, fallback-class)
     {block}
 
-landscape(density = null)
+landscape(density = null, fallback-class = null)
+  selected = selector()
   if not (rupture.rasterise-media-queries)
     if -is-string(density)
       density = convert(density)
     if density
-      +pixel-ratio(density, orientation: landscape)
+      +pixel-ratio(density, orientation: landscape, fallback-class)
         {block}
     else
       @media only screen and (orientation: landscape)
         {block}
+      if fallback-class
+        +create-fallback-class(selected, fallback-class)
+          {block}
 
-portrait(density = null)
+portrait(density = null, fallback-class = null)
+  selected = selector()
   if not (rupture.rasterise-media-queries)
     if -is-string(density)
       density = convert(density)
     if density
-      +pixel-ratio(density, orientation: portrait)
+      +pixel-ratio(density, orientation: portrait, fallback-class)
         {block}
     else
       @media only screen and (orientation: portrait)
         {block}
+      if fallback-class
+        +create-fallback-class(selected, fallback-class)
+          {block}
